# python-dotnetinteropt

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: format-lint.yml  generate-doc.yml  release.yml  unit-tests.yml
docs/source/: conf.py  index.rst  package.rst
scripts/: example_script.py
src/dotnetinteropt/: __init__.py  backend.py  frontend.py  loader.py
src/dotnetinteropt_examples/: hello_dotnet.py  json_dotnet.py
src/example/: __init__.py  __main__.py  example.py
tests/: conftest.py  test_example.py
